k8s-config/k8s-yaml/analysis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: analysis
  name: analysis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: analysis
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/hobbit-core: "true"
        io.kompose.service: analysis
    spec:
      containers:
      - env:
        - name: HOBBIT_RABBIT_HOST
          value: 192.168.141.52:5672
        image: hobbitproject/hobbit-analysis-component:latest
        imagePullPolicy: "IfNotPresent"
        name: analysis
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
