k8s-config/k8s-yaml/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/hobbit: "true"
        io.kompose.service: keycloak
    spec:
      containers:
      - image: hobbitproject/hobbit-keycloak:latest
        imagePullPolicy: ""
        securityContext:
            allowPrivilegeEscalation: false
            runAsUser: 0
        name: keycloak
        ports:
        - containerPort: 8080
        resources: {}
        volumeMounts:
        - mountPath: /opt/jboss/keycloak/standalone/data/db
          name: key-cloak-data
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: key-cloak-data
        hostPath:
            path: /config/keycloak
status: {}
