k8s-config/k8s-yaml/platform-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: platform-controller
  name: platform-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: platform-controller
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/hobbit-core: "true"
        io.kompose.service: platform-controller
    spec:
      containers:
      - env:
        - name: DEPLOY_ENV
          value: testing
        - name: GITLAB_USER
          value: oluoniyide
        - name: GITLAB_EMAIL
          value: oluoniyide@yahoo.com
        - name: GITLAB_TOKEN
          value: zRmVRQiodtu47Sj31Jmu
        - name: HOBBIT_RABBIT_EXPERIMENTS_HOST_NAME_KEY
          value: 192.168.141.52:5672
        - name: HOBBIT_RABBIT_HOST
          value: 192.168.141.52:5672
        - name: HOBBIT_REDIS_HOST
          value: 192.168.141.53
        - name: SWARM_NODE_NUMBER
          value: "1"
        image: oluoniyide/platformcontroller:3.2.1
        imagePullPolicy: ""
        name: platform-controller
        resources: {}
        volumeMounts:
        - mountPath: /var/run/docker.sock
          name: docker-sock
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: docker-sock
        hostPath:
