k8s-config/k8s-yaml/storage-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: storage-service
  name: storage-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: storage-service
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/hobbit-core: "true"
        io.kompose.service: storage-service
    spec:
      containers:
      - env:
        - name: HOBBIT_RABBIT_HOST
          value: 192.168.141.26:5672
        - name: SPARQL_ENDPOINT_PASSWORD
          value: Password
        - name: SPARQL_ENDPOINT_URL
          value: "http://192.168.141.24:8890/sparql"
        - name: SPARQL_ENDPOINT_USERNAME
          value: HobbitPlatform
        image: hobbitproject/hobbit-storage-service:latest
        imagePullPolicy: ""
        name: storage-service
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
