k8s-config/k8s-yaml/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: keycloak
  name: keycloak
spec:
  ports:
  - name: "8181"
    port: 8181
    targetPort: 8080
  selector:
    io.kompose.service: keycloak
status:
  loadBalancer: {}
