k8s-config/k8s-yaml/hobbit-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: hobbit
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/hobbit: "true"
  podSelector:
    matchLabels:
      io.kompose.network/hobbit: "true"
